--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Pragyanpath",
   "short_name": "Pragyanpath",
   "description": "Pragyanpath is an educational app with learning content, games, and smart tools for students.",
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0d6efd",
@@ -11,12 +11,14 @@
     {
       "src": "assets/images/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "assets/images/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
