--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,22 +1,23 @@
 {
-  "name": "Pragyanpath",
-  "short_name": "Pragyanpath",
-  "id": "/?pragyanpath",
-  "description": "Complete Education App for Class 1 to 12, Competitive Exams, Skills, Life Skills & Chess Learning with ELO",
+  "name": "PragyanPath",
+  "short_name": "PragyanPath",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#f4b400",
+  "theme_color": "#F4B400",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "/assets/icons/icon-192.png",
+      "src": "/assets/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/assets/icons/icon-512.png",
+      "src": "/assets/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
